...
    <string name="icon_content_description_moon_phase_waxing_gibbous_1">Waxing Gibbous 1</string>
    <string name="icon_content_description_moon_phase_waxing_gibbous_2">Waxing Gibbous 2</string>
    <string name="icon_content_description_moon_phase_waxing_gibbous_3">Waxing Gibbous 3</string>
    <string name="icon_content_description_moon_phase_waxing_gibbous_4">Waxing Gibbous 4</string>
    <string name="icon_content_description_moon_phase_waxing_gibbous_5">Waxing Gibbous 5</string>
    <string name="icon_content_description_moon_phase_waxing_gibbous_6">Waxing Gibbous 6</string>
    <string name="icon_content_description_moonrise" translatable="false">@string/screen_forecast_common_sun_and_moon_moonrise_title</string>
    <string name="icon_content_description_moonset" translatable="false">@string/screen_forecast_common_sun_and_moon_moonset_title</string>
    <string name="icon_content_description_order" translatable="false">@string/screen_settings_order_title</string>
    <string name="icon_content_description_pressure" translatable="false">@string/screen_forecast_common_forecast_name_pressure</string>
    <string name="icon_content_description_probability_of_precipitation" translatable="false">@string/screen_forecast_common_forecast_name_probability_of_precipitation</string>
    <string name="icon_content_description_rain" translatable="false">@string/screen_forecast_common_forecast_name_rain</string>
    <string name="icon_content_description_reset">Reset</string>
    <string name="icon_content_description_search" translatable="false">@string/screen_search_overview_bar_placeholder</string>
...
    <string name="screen_forecast_common_wind_degrees_w">W</string>
    <string name="screen_forecast_common_wind_degrees_wnw">WNW</string>
    <string name="screen_forecast_common_wind_degrees_wsw">WSW</string>

    <string name="screen_forecast_overview_alerts_event_name_fallback">Alert</string>
    <string name="screen_forecast_overview_current_weather_title">Current weather</string>
    <string name="screen_forecast_overview_daily_title">Daily forecast</string>
    <string name="screen_forecast_overview_hourly_title">Hourly forecast</string>
    <plurals name="screen_forecast_overview_precipitation_headline_breaking">
        <item quantity="one">A break in precipitation in %1$s minute</item>
        <item quantity="other">A break in precipitation in %1$s minutes</item>
    </plurals>
    <plurals name="screen_forecast_overview_precipitation_headline_ending">
        <item quantity="one">Precipitation ending in %1$s minute</item>
...
    <string name="screen_forecast_overview_precipitation_headline_full">Precipitation won\'t end within an hour</string>
    <string name="screen_forecast_overview_precipitation_headline_none">No precipitation within an hour</string>
    <plurals name="screen_forecast_overview_precipitation_headline_starting">
        <item quantity="one">Precipitation starting in %1$s minute</item>
        <item quantity="other">Precipitation starting in %1$s minutes</item>
    </plurals>
    <string name="screen_forecast_overview_precipitation_title">Precipitation</string>
    <string name="screen_forecast_overview_sun_and_moon_title">Sun and moon</string>

    <string name="screen_search_overview_bar_placeholder">Search</string>
    <string name="screen_search_overview_search_no_results">No locations found</string>
    <string name="screen_search_overview_snackbar_back_pressed_when_visited_locations_is_empty_when_not_allowed">You need to select a location</string>
    <string name="screen_search_overview_snackbar_find_location_failure_message">Location request failed</string>
    <string name="screen_search_overview_snackbar_find_location_not_found_message">Location was not found</string>
...
