...

                    NBNavigationDrawerItem.Divider -> {
                        Divider()
                    }

                    is NBNavigationDrawerItem.Headline -> {
                        Headline(
                            item = drawerItem
                        )
                    }

                }
            }
...
